corréction bugs mineurs et repsonsive design toutes les pages

--- a/views/frontend/_search.html.twig
+++ b/views/frontend/_search.html.twig
@@ -48,7 +48,7 @@
         }}) }}
         {{ form_errors(loisirForm.position) }}
         {{ form_widget(loisirForm.position, { 'attr':  {
-            'class':'custom-dropdown__select custom-dropdown__select--white',
+            'class':'',
         }}) }}
 
         <!-- Ville de départ pour position du curseur --><span  id="position"></span>
