--- a/views/frontend/unique.html.twig
+++ b/views/frontend/unique.html.twig
@@ -1,25 +1,57 @@
 {% extends "/views/layout.html.twig" %}
 
+{% block meta %}
+    <title>{{ loisir.title }}</title>
+    <meta name="description" content="{{ loisir.content }}"/>
+{% endblock %}
+
 {% block content %}
 
     <div class="title-show">
+
         <div>
             <h2>{{ loisir.title }}</h2>
             <img class="liste-main-unique" src="/images/{{ loisir.image }}">
+        </div>
 
-            <div class="text-show">
+        <div class="info-unique">
+            <p>NOTE :
+                {% for commentNote in commentsNote %}
+                {{ commentNote.moyenne|round(2, 'floor') }}
+            {% else %}
+                Soyez le premier a noté ce lieu
+                {% endfor %}/10 </p>
+            <p>{{ loisir.content }}</p>
+            <p class="adress">Adresse: <br/>{{ loisir.position }}</p>
+            <p><a href="#map"> Voire sur le plans </a></p>
+            <p><A class="prix" href="{{ loisir.lien }}"> Lien du site</a></p>
+
+        </div>
+
+        <div class="text-show">
             <h3>Commentaires</h3>
             {% for comment in comments %}
-                <strong>{{ comment.author.username }}</strong> : {{ comment.content }} <a href="/comment/{{ comment.id }}/signale">: Signaler le commentaire</a><br>
+                Note {{ comment.note }} <strong> {{ comment.author.username }} </strong> : {{ comment.content }} <a
+                    href="/comment/{{ comment.id }}/signale"> : Signaler le commentaire</a><br>
 
             {% else %}
                 Aucun commentaire trouvez.
             {% endfor %}
 
+
             <h3>Ajouter un commentaire</h3>
 
             {{ form_start(commentForm) }}
             <div class="form-group">
+                {{ form_label(commentForm.note, null, { 'label_attr':  {
+                    'class': 'col-sm-4 control-label'
+                }}) }}
+                <div class="col-sm-6">
+                    {{ form_errors(commentForm.note) }}
+                    {{ form_widget(commentForm.note, { 'attr':  {
+                        'class': 'checkbox'
+                    }}) }}
+                </div>
                 {{ form_errors(commentForm.content) }}
                 {{ form_widget(commentForm.content, { 'attr':  {
                     'rows': '4',
@@ -28,7 +60,7 @@
                 }}) }}
             </div>
             <div class="form-group">
-                <input type="submit" class="btn btn-primary" value="Publier" />
+                <input type="submit" class="btn btn-primary" value="Publier"/>
             </div>
             {{ form_end(commentForm) }}
             {% for flashMessage in app.session.flashbag.get('success') %}
@@ -36,27 +68,19 @@
                     {{ flashMessage }}
                 </div>
             {% endfor %}
-            </div>
         </div>
 
-        <div class="info-unique">
-            <p>NOTE : {{ loisir.note }}/10 </p>
-            <p>{{ loisir.content }}</p>
-            <p class="adress">Adresse: <br />{{ loisir.position }}</p>
-            <p><a href="#map"> Voire sur le plans </a></p>
-            <p><A class="prix" href="{{ loisir.lien }}"> Lien du site</a></p>
-
-        </div>
     </div>
 
 
     <div id="map"></div>
 
 
-<!-- script qui appel la map -->
-<script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
-<script async defer src="https://maps.googleapis.com/maps/api/js?v=3&key=AIzaSyCLCyZdCatCyO348_1vXQr4yEQkDheyQ3A&callback=initMap&posi=lat:{{ loisir.position|replace({",": ", lng: ", '%that%': 48}) }}"></script>
-<script src="/js/ajax.js"></script>
-<script src="/js/map-unique.js"></script>
-<script src="/js/menu.js"></script>
+    <!-- script qui appel la map -->
+    <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
+    <script async defer
+            src="https://maps.googleapis.com/maps/api/js?v=3&key=AIzaSyCLCyZdCatCyO348_1vXQr4yEQkDheyQ3A&callback=initMap&posi=lat:{{ loisir.position|replace({",": ", lng: ", '%that%': 48}) }}"></script>
+    <script src="/js/ajax.js"></script>
+    <script src="/js/map-unique.js"></script>
+    <script src="/js/menu.js"></script>
 {% endblock %}
