--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -4,15 +4,14 @@
 <head>
     <meta name="viewport" content="initial-scale=1.0">
     <meta charset="utf-8">
-    <title>Idées loisirs</title>
+    {% block meta %}{% endblock %}
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
 </head>
-<div class="leg"> En poursuivant votre navigation, vous acceptez l’utilisation de Cookies pour réaliser des statistiques de visites.</div>
-
+<div id="haut"></div>
 <div id="menu-header">
     <h1>
         <a id="blue-menu5" class="title" href="#slide">
@@ -41,36 +40,46 @@
     </nav>
 </div>
 
-    {% block content %}{% endblock %}
 
-    <section id="footer">
-        <div class="texte-footer"><h2>Remerciement</h2><p>Site web réaliser avec l'aide <a href="https://openclassrooms.com/referral/lamlaam" class="white" title="Formation de professionnelle en ligne"> d'OpenClassrooms </a></p> <p> Grâce à OpenClassroom j'ai pu réaliser mon rêve, de devenir développeur d'applications web.</p> </div>
-        <div class="texte-footer"><h2>Professionnels</h2>  <p> <a href="" class="white">Affiliation<i class="fa fa-angle-double-right fa-moyen" aria-hidden="true"></i></a></p> <p> <a href="" class="white">Partenaires<i class="fa fa-angle-double-right fa-moyen" aria-hidden="true"></i></a></p> </div>
-        <div class="texte-footer"><h2>En savoir plus </h2> <p></p> <p> <a href="" class="white">Qui sommes-nous ? <i class="fa fa-angle-double-right fa-moyen" aria-hidden="true"></i></a></p> </div>
+{% block content %}{% endblock %}
 
-        <div class="texte-footer"><h2>Suivez nous </h2>
-            <p>
-                <a href="https://twitter.com/lamridjamal_off"><i class="fa fa-twitter fa-moyen white" title="Twitter"></i></a>
-                <a href="https://www.linkedin.com/in/djamal-lamri-5111a8128/"><i class="fa fa-linkedin fa-moyen white" title="LinkedIn"></i></a>
-                <a href="https://github.com/pubs1896/parcour5"><i class="fa fa-github fa-moyen white" title="LinkedIn"></i></a>
-            </p>
-        </div>
-        {% if is_granted('IS_AUTHENTICATED_FULLY') %}
-            <span class="glyphicon glyphicon-user"></span> Welcome, {{ app.user.username }} <b class="caret"></b><a href="{{ path('logout') }}">Log out</a>
-        {% else %}
-            <a href="{{ path('login') }}">Log in</a>
-        {% endif %}
-        {% if app.user and is_granted('ROLE_ADMIN') %}
-            <a href="{{ path('admin') }}"><span class="glyphicon glyphicon-cog"></span> Administration</a>
-        {% endif %}
-        <div id="copyright"> copyright 2017 progfacil.com | <a href="https://www.progfacil.com/condition.html" target="_blank" class="white">Mention légales</a> </div>
-    </section>
+
+<div class="leg"> En poursuivant votre navigation, vous acceptez l’utilisation de Cookies pour réaliser des statistiques de visites.</div>
+
+<section id="footer">
+    <div class="texte-footer"><h2>Remerciement</h2><p>Site web réaliser avec l'aide <a href="https://openclassrooms.com/referral/lamlaam" class="white" title="Formation de professionnelle en ligne"> d'OpenClassrooms </a></p> <p> Grâce à OpenClassroom j'ai pu réaliser mon rêve, de devenir développeur d'applications web.</p> </div>
+    <div class="texte-footer"><h2>Professionnels</h2>  <p> <a href="" class="white">Affiliation<i class="fa fa-angle-double-right fa-moyen" aria-hidden="true"></i></a></p> <p> <a href="" class="white">Partenaires<i class="fa fa-angle-double-right fa-moyen" aria-hidden="true"></i></a></p> </div>
+    <div class="texte-footer"><h2>En savoir plus </h2> <p></p> <p> <a href="" class="white">Qui sommes-nous ? <i class="fa fa-angle-double-right fa-moyen" aria-hidden="true"></i></a></p> </div>
+
+    <div class="texte-footer"><h2>Suivez nous </h2>
+        <p>
+            <a href="https://twitter.com/lamridjamal_off"><i class="fa fa-twitter fa-moyen white" title="Twitter"></i></a>
+            <a href="https://www.linkedin.com/in/djamal-lamri-5111a8128/"><i class="fa fa-linkedin fa-moyen white" title="LinkedIn"></i></a>
+            <a href="https://github.com/pubs1896/parcour5"><i class="fa fa-github fa-moyen white" title="LinkedIn"></i></a>
+        </p>
+    </div>
+    {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+        <span class="glyphicon glyphicon-user"></span> Welcome, {{ app.user.username }} <b class="caret"></b><a href="{{ path('logout') }}">Log out</a>
+    {% else %}
+        <a href="{{ path('login') }}">Log in</a>
+    {% endif %}
+    {% if app.user and is_granted('ROLE_ADMIN') %}
+        <a href="{{ path('admin') }}"><span class="glyphicon glyphicon-cog"></span> Administration</a>
+    {% endif %}
+    <div id="copyright"> copyright 2017 progfacil.com | <a href="https://www.progfacil.com/condition.html" target="_blank" class="white">Mention légales</a> </div>
+</section>
 </div>
-
-    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-    <script src="/js/date.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<div class="scroll-top-wrapper ">
+    <a href="#haut">
+        <span class="scroll-top-inner">
+            <i class="fa fa-2x fa-arrow-circle-up"></i>
+        </span>
+    </a>
+</div>
+<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+<script src="/js/date.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 </body>
 </html>
