--- a/views/frontend/index.html.twig
+++ b/views/frontend/index.html.twig
@@ -49,7 +49,10 @@
         <P class="prix">{{ loisir.prix|replace({0: "GRATUIT"}) }} €<br /><a href="{{ path('sejours/', { 'id': loisir.id }) }}?positionL={{ loisir.positionLat }}&positionN={{ loisir.positionLng }}"><span class="reserver">l Plus d'info</span></a></P>
     </div>
 
-
+    <div class="alert info">
+        <span class="closebtn">&times;</span>
+        En poursuivant votre navigation, vous acceptez l’utilisation de Cookies pour réaliser des statistiques de visites.
+    </div>
     <div id="map" class="none"></div>
 
 
@@ -57,6 +60,7 @@
 
     <script src="/js/ajax.js"></script>
     <script src="/js/geocode.js"></script>
+    <script src="/js/alert-cookies.js"></script>
     <script type="text/javascript"
             src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCLCyZdCatCyO348_1vXQr4yEQkDheyQ3A&libraries=places&callback=initAutocomplete&"
             async defer></script>
