--- a/views/frontend/unique.html.twig
+++ b/views/frontend/unique.html.twig
@@ -24,52 +24,54 @@
             <p>{{ loisir.content }}</p>
             <p class="adress">Adresse: <br/>{{ loisir.position }}</p>
             <p><a href="#map"> Voire sur le plans </a></p>
-            <p><A class="prix" href="{{ loisir.lien }}"> Lien du site</a></p>
+            <p class="prix-unique"> Prix {{ loisir.prix }} €</p>
+            <p><A href="{{ loisir.lien }}"> Lien du site</a></p>
 
         </div>
 
-        <div class="text-show">
-            <h3>Commentaires</h3>
-            {% for comment in comments %}
-                Note {{ comment.note }} <strong> {{ comment.author.username }} </strong> : {{ comment.content }} <a
-                    href="/comment/{{ comment.id }}/signale"> : Signaler le commentaire</a><br>
-
-            {% else %}
-                Aucun commentaire trouvez.
-            {% endfor %}
+    </div>
 
 
-            <h3>Ajouter un commentaire</h3>
+    <div class="text-show">
+        <h3>Commentaires</h3>
+        {% for comment in comments %}
+            Note {{ comment.note }} <strong> {{ comment.author.username }} </strong> : {{ comment.content }} <a
+                href="/comment/{{ comment.id }}/signale"> : Signaler le commentaire</a><br>
 
-            {{ form_start(commentForm) }}
-            <div class="form-group">
-                {{ form_label(commentForm.note, null, { 'label_attr':  {
-                    'class': 'col-sm-4 control-label'
-                }}) }}
-                <div class="col-sm-6">
-                    {{ form_errors(commentForm.note) }}
-                    {{ form_widget(commentForm.note, { 'attr':  {
-                        'class': 'checkbox'
-                    }}) }}
-                </div>
-                {{ form_errors(commentForm.content) }}
-                {{ form_widget(commentForm.content, { 'attr':  {
-                    'rows': '4',
-                    'class': 'form-control',
-                    'placeholder': 'Enter your comment'
+        {% else %}
+            Aucun commentaire trouvez.
+        {% endfor %}
+
+
+        <h3>Ajouter un commentaire</h3>
+
+        {{ form_start(commentForm) }}
+        <div class="form-group">
+            {{ form_label(commentForm.note, null, { 'label_attr':  {
+                'class': 'col-sm-4 control-label'
+            }}) }}
+            <div class="col-sm-6">
+                {{ form_errors(commentForm.note) }}
+                {{ form_widget(commentForm.note, { 'attr':  {
+                    'class': 'checkbox'
                 }}) }}
             </div>
-            <div class="form-group">
-                <input type="submit" class="btn btn-primary" value="Publier"/>
-            </div>
-            {{ form_end(commentForm) }}
-            {% for flashMessage in app.session.flashbag.get('success') %}
-                <div class="alert alert-success">
-                    {{ flashMessage }}
-                </div>
-            {% endfor %}
+            {{ form_errors(commentForm.content) }}
+            {{ form_widget(commentForm.content, { 'attr':  {
+                'rows': '4',
+                'class': 'form-control',
+                'placeholder': 'Enter your comment'
+            }}) }}
         </div>
-
+        <div class="form-group">
+            <input type="submit" class="btn btn-primary" value="Publier"/>
+        </div>
+        {{ form_end(commentForm) }}
+        {% for flashMessage in app.session.flashbag.get('success') %}
+            <div class="alert alert-success">
+                {{ flashMessage }}
+            </div>
+        {% endfor %}
     </div>
 
 
