Amelioration design page unique et ajout popup modal

--- a/views/frontend/_slide.html.twig
+++ b/views/frontend/_slide.html.twig
@@ -4,7 +4,7 @@
     <div id="img-slide1">
 
         <div class="texte-slide1">
-            <h2>Vous chercher une idée sortie</h2>
+            <h2 class="white">Vous chercher une idée sortie</h2>
             <p>Vous êtes au bon endroit.<br />
                 Mise a jours régulière des sorties et événement. </p>
             <a href="geoloc"><p class="rectangle">PLANS <i class="fa fa-angle-right fa-moyen" aria-hidden="true"></i></p></a>
@@ -13,10 +13,10 @@
 
     <div id="img-slide2">
         <div class="texte-slide2">
-            <h2>Divertissement pour toutes la familles </h2>
+            <h2 class="white">Divertissement pour toutes la familles </h2>
             <p>Découvrez les loisirs, lieux touristiques et séjours.<br />
                 Une liste de suggestion de loisirs et vacances via le lien ci dessous.</p>
-            <a href="#main"><p class="rectangle">LISTE <i class="fa fa-angle-right fa-moyen" aria-hidden="true"></i></p></a>
+            <a href="geoloc"><p class="rectangle">LISTE <i class="fa fa-angle-right fa-moyen" aria-hidden="true"></i></p></a>
         </div>
     </div>
 
