--- a/views/frontend/geoloc.html.twig
+++ b/views/frontend/geoloc.html.twig
@@ -5,8 +5,9 @@
 {% block content %}
 
     <div id="mapInfo">
+        <div id="infoLoisirs"></div>
         <div id="map"></div>
-        <div id="infoLoisirs">essai</div>
+
     </div>
 
     <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
